--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
   </video>
   <h2 class=".header--secondary">Your personal travel guide</h2>
   <h4 class=".header--sub-header">Excursion remembers places you like, and recommends new points of interest around you.</h4>
+<p><img src="resources/css/images/camp" ></p>
+<p><img src="resources/css/images/cellphone""></p>
+<h4 class=".header--sub-header">Coming soon for iphone and android</h4>
+<p> <a class=".link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
 </body>
 </html>
