--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 <p><img src="resources/css/images/cellphone""></p>
 <h4 class=".header--sub-header">Coming soon for iphone and android</h4>
 <p> <a class=".link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
+<p class="footer--copyright"> ©Excursion</p>
 </body>
 </html>
